--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest; TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest"
+    "test": "npm run test:LA; npm run test:BER; npm run test:SG",
+    "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest",
+    "test:SG": "TZ='Asia/Singapore' NODE_OPTIONS=--experimental-vm-modules jest"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
   "license": "ISC",
