--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,4 +31,7 @@ jobs:
       - run: npm install
 
       # Run tests
-      - run: npm test
+      - name: Run Test
+        uses: ArtiomTr/jest-coverage-report-action@v2
+        with:
+          test-script: npm run test
