--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -32,5 +32,6 @@ jobs:
       # Run tests
       - name: Run Test
         uses: ArtiomTr/jest-coverage-report-action@v2
-        with:
-          test-script: TZ='${{ matrix.node-version }}' NODE_OPTIONS=--experimental-vm-modules jest
+        env:
+          TZ: ${{ matrix.node-version }}
+          NODE_OPTIONS: --experimental-vm-modules
