--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -31,7 +31,7 @@ jobs:
 
       # Run tests
       - name: Run Test
-        run: jest >> $GITHUB_STEP_SUMMARY
+        run: npm run jest >> $GITHUB_STEP_SUMMARY
         env:
           TZ: ${{ matrix.node-version }}
           NODE_OPTIONS: --experimental-vm-modules
