--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "npm run test:LA; npm run test:BER; npm run test:SG",
-    "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:SG": "TZ='Asia/Singapore' NODE_OPTIONS=--experimental-vm-modules jest",
-    "test:ci": "jest --ci"
+    "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
+    "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
+    "test:SG": "TZ='Asia/Singapore' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
+    "test:ci": "jest --ci --config=tests/jest.config.js"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
   "license": "ISC",
