chore: move package to new namespace + build workflow

--- a/.github/workflows/ci-tests.yml
+++ b/.github/workflows/ci-tests.yml
@@ -5,9 +5,11 @@ name: Node.js CI Tests
 
 on:
   push:
-    branches: ['master']
+    tags-ignore:
+      - '**'
   pull_request:
-    branches: ['master']
+    branches:
+      - 'main'
 
 jobs:
   test:
