--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stagetimer/timeutils",
+  "name": "@stagetimerio/timeutils",
   "version": "0.5.0",
   "description": "Timer utilities for stagetimer.io",
   "main": "index.js",
@@ -12,6 +12,10 @@
     "test:ci": "jest --ci --config=tests/jest.config.js"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/stagetimerio/package-timeutils.git"
+  },
   "license": "ISC",
   "dependencies": {
     "date-fns": "^2.28.0"
