--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "npm run test:LA; npm run test:BER; npm run test:SG",
+    "test": "npm run test:UTC; npm run test:LA; npm run test:BER; npm run test:SYD",
+    "test:UTC": "TZ='UTC' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:SG": "TZ='Asia/Singapore' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
+    "test:SYD": "TZ='Australia/Sydney' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:ci": "jest --ci --config=tests/jest.config.js"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
@@ -18,7 +19,8 @@
   },
   "license": "ISC",
   "dependencies": {
-    "date-fns": "^2.28.0"
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^2.0.0"
   },
   "devDependencies": {
     "chai": "^4.3.6",
