--- a/.github/workflows/npm-publish-github-package.yml
+++ b/.github/workflows/npm-publish-github-package.yml
@@ -20,7 +20,7 @@ jobs:
       - run: npm test
 
   publish:
-    needs: build
+    needs: test
     runs-on: ubuntu-latest
     permissions:
       contents: read
