chore: build esm and cjs dist files

--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -7,6 +7,8 @@ on:
   push:
     branches:
       - '**'
+    tags-ignore:
+      - '**'
   pull_request:
     branches:
       - '**'
@@ -26,6 +28,11 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: 20
+
+      - name: Write .npmrc file
+        run: |
+          echo //npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }} > $HOME/.npmrc
+          echo @rundown-studio:registry=https://npm.pkg.github.com >> $HOME/.npmrc
 
       - name: Install Dependencies
         run: npm install
