--- a/package.json
+++ b/package.json
@@ -4,20 +4,30 @@
   "description": "Timer utilities for stagetimer.io",
   "main": "index.js",
   "type": "module",
+  "exports": {
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
   "scripts": {
     "test": "npm run test:UTC; npm run test:LA; npm run test:BER; npm run test:SYD",
     "test:UTC": "TZ='UTC' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
     "test:SYD": "TZ='Australia/Sydney' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:ci": "jest --ci --config=tests/jest.config.js"
+    "test:ci": "jest --ci --config=tests/jest.config.js",
+    "build": "rm -rf ./dist && npm run build:cjs && npm run build:esm",
+    "build:cjs": "esbuild index.js --outfile=./dist/cjs/index.js --legal-comments=linked --bundle --packages=external --format=cjs && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
+    "build:esm": "esbuild index.js --outfile=./dist/esm/index.js --legal-comments=linked --bundle --packages=external --format=esm && echo '{\"type\": \"module\"}' > dist/esm/package.json"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/stagetimerio/package-timeutils.git"
   },
-  "exports": "./index.js",
   "license": "ISC",
   "dependencies": {
     "date-fns": "^3.6.0",
@@ -25,6 +35,7 @@
   },
   "devDependencies": {
     "chai": "^5.0.0",
+    "esbuild": "^0.24.0",
     "eslint": "^9.3.0",
     "jest": "^29.4.1"
   }
