--- a/package.json
+++ b/package.json
@@ -30,12 +30,12 @@
   },
   "license": "ISC",
   "dependencies": {
-    "date-fns": "^3.6.0",
-    "date-fns-tz": "^3.1.3"
+    "@date-fns/tz": "^1.2.0",
+    "date-fns": "^4.1.0"
   },
   "devDependencies": {
     "chai": "^5.0.0",
-    "esbuild": "^0.24.0",
+    "esbuild": "^0.25.2",
     "eslint": "^9.3.0",
     "jest": "^29.4.1"
   }
