--- a/package.json
+++ b/package.json
@@ -2,26 +2,36 @@
   "name": "@stagetimerio/timeutils",
   "version": "1.10.4",
   "description": "Timer utilities for stagetimer.io",
-  "main": "index.js",
+  "main": "./dist/index.cjs",
+  "module": "./dist/index.js",
+  "types": "./dist/index.d.ts",
   "type": "module",
   "exports": {
-    "require": "./dist/cjs/index.js",
-    "import": "./dist/esm/index.js"
+    ".": {
+      "import": {
+        "types": "./dist/index.d.ts",
+        "default": "./dist/index.js"
+      },
+      "require": {
+        "types": "./dist/index.d.cts",
+        "default": "./dist/index.cjs"
+      }
+    }
   },
   "files": [
     "dist",
     "README.md"
   ],
   "scripts": {
+    "build": "tsup",
+    "typecheck": "tsc --noEmit",
     "test": "npm run test:UTC; npm run test:LA; npm run test:BER; npm run test:SYD",
-    "test:UTC": "TZ='UTC' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:SYD": "TZ='Australia/Sydney' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.js",
-    "test:ci": "jest --ci --config=tests/jest.config.js",
-    "build": "rm -rf ./dist && npm run build:cjs && npm run build:esm",
-    "build:cjs": "esbuild index.js --outfile=./dist/cjs/index.js --legal-comments=linked --bundle --packages=external --format=cjs && echo '{\"type\": \"commonjs\"}' > dist/cjs/package.json",
-    "build:esm": "esbuild index.js --outfile=./dist/esm/index.js --legal-comments=linked --bundle --packages=external --format=esm && echo '{\"type\": \"module\"}' > dist/esm/package.json"
+    "test:UTC": "TZ='UTC' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.ts",
+    "test:LA": "TZ='America/Los_Angeles' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.ts",
+    "test:BER": "TZ='Europe/Berlin' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.ts",
+    "test:SYD": "TZ='Australia/Sydney' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.ts",
+    "test:ci": "jest --ci --config=tests/jest.config.ts",
+    "prepublishOnly": "npm run typecheck && npm run build"
   },
   "author": "Lukas Hermann <hey@lukashermann.dev>",
   "repository": {
@@ -34,9 +44,15 @@
     "date-fns": "^4.1.0"
   },
   "devDependencies": {
+    "@types/chai": "^5.2.3",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^25.0.3",
     "chai": "^5.0.0",
-    "esbuild": "^0.25.2",
     "eslint": "^9.3.0",
-    "jest": "^29.4.1"
+    "jest": "^29.4.1",
+    "ts-jest": "^29.4.6",
+    "ts-node": "^10.9.2",
+    "tsup": "^8.5.1",
+    "typescript": "^5.9.3"
   }
 }
