--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "1.10.4",
   "description": "Timer utilities for stagetimer.io",
   "main": "./dist/index.cjs",
-  "module": "./dist/index.js",
-  "types": "./dist/index.d.ts",
+  "module": "./dist/index.mjs",
+  "types": "./dist/index.d.mts",
   "type": "module",
   "exports": {
     ".": {
       "import": {
-        "types": "./dist/index.d.ts",
-        "default": "./dist/index.js"
+        "types": "./dist/index.d.mts",
+        "default": "./dist/index.mjs"
       },
       "require": {
         "types": "./dist/index.d.cts",
@@ -23,7 +23,7 @@
     "README.md"
   ],
   "scripts": {
-    "build": "tsup",
+    "build": "tsdown",
     "typecheck": "tsc --noEmit",
     "test": "npm run test:UTC; npm run test:LA; npm run test:BER; npm run test:SYD",
     "test:UTC": "TZ='UTC' NODE_OPTIONS=--experimental-vm-modules jest --config=tests/jest.config.ts",
@@ -52,7 +52,7 @@
     "jest": "^29.4.1",
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
-    "tsup": "^8.5.1",
+    "tsdown": "^0.18.2",
     "typescript": "^5.9.3"
   }
 }
