--- a/.github/workflows/publish-package.yml
+++ b/.github/workflows/publish-package.yml
@@ -66,7 +66,7 @@ jobs:
           NODE_OPTIONS: --experimental-vm-modules
 
   publish:
-    needs: test
+    needs: [build, test]
     runs-on: ubuntu-latest
     permissions:
       contents: read
@@ -87,12 +87,8 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@stagetimerio'
 
-      - name: Install Dependencies
-        run: npm ci --loglevel=error
-        env:
-          NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
+      # Skip prepublishOnly hook since build job already ran typecheck and build
       - name: Publish Package
-        run: npm publish
+        run: npm publish --ignore-scripts
         env:
           NODE_AUTH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
