--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "ts-jest": "^29.4.6",
     "ts-node": "^10.9.2",
     "tsdown": "^0.18.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.9.3",
+    "typescript-eslint": "^8.54.0"
   }
 }
